--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
   <head>
     <title>nat-care</title>
     <style>
-      body {font-family:Tahoma, verdana, Segoe, sans-serif;}
+      body {front-family:Tahoma, verdana, Segoe, sans-serif;}
     </style>
   </head>
   <body>
     <h1>nat-care</h1>
     <ul>
-      <li>CSI205 Font End Software Development, click <a href='https://nat-care.github.io/_multipages'>Here</a></li>
+      <li>CSI205 Front End Software Development, click <a href='https://nat-care.github.io/_multipages'>Here</a></li>
     </ul>
   </body>
 </html>
